# edge_leg_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: edge_leg_detector.launch  leg_detector.launch  simple_leg_detector.launch
src/: .leg_detector_node.cpp.swp  leg_detector_node.cpp
src/edge_leg_detector/: detector.cpp
src/simple_leg_detector/: detector.cpp
