<?xml version="1.0"?>
<package>
  <name>edge_leg_detector</name>
  <version>0.0.1</version>
  <description>A leg detector that identifies three different leg patterns based on the paper of Nicholas Belloto</description>

  <maintainer email="marcobecerrap@gmail.com">Marco Antonio Becerra Pedraza</maintainer>
  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
